--- a/data.fr.properties
+++ b/data.fr.properties
@@ -58,3 +58,6 @@ report=
 # Firefox Affiliates
 affiiates= Firefox Filiales
  
+
+success-title=Le succès de notre mission dépend de la participation de personnes comme vous.
+success-description=écouvrez comment vous pouvez participer ou aider Mozilla à faire la différence dans la vie des internautes, où qu’ils soient, pour les 15 prochaines années — et plus encore.
